<resources>
    <string name="app_name" translatable="false">FastToHome</string>
    <string name="apiUrl" translatable="false">http://10.0.2.2/php/webService/api.php</string>

    <string name="buttonEntrar">INICIAR SESIÓN</string>
    <string name="buttonRegistro">REGÍSTRATE</string>
    <string name="buttonSiguientePaso">SIGUIENTE PASO</string>

    <string name="titulosRegistro">Registro</string>

    <string name="userName">Nombre:</string>
    <string name="userDni">Dni:</string>
    <string name="userLastname">Apellidos:</string>
    <string name="userTlf">Teléfono:</string>
    <string name="userEmail">Correo Elecrónico:</string>
    <string name="userPassword">Contraseña:</string>
    <string name="userPasswordConfirmation">Confirmar Contraseña:</string>
    <string name="userDirNumero">Número:</string>
    <string name="userDirCp">Código Postal:</string>
    <string name="userDirCalle">Calle:</string>
    <string name="userDirCiudad">Ciudad:</string>
    <string name="userDirOtrosDatos">Otros:</string>
    <string name="title_activity_principal">principal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_ventana_principal">ventanaPrincipal</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


</resources>