<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaRegistro">

    <EditText
        android:id="@+id/editTextTextPersonName17"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="563dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:text="@string/userLastname"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="533dp" />

    <EditText
        android:id="@+id/editTextTextPersonName16"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="476dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:text="@string/userLastname"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="446dp" />

    <EditText
        android:id="@+id/editTextTextPersonName15"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="387dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:text="@string/userTlf"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="357dp" />

    <EditText
        android:id="@+id/editTextTextPersonName14"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="295dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:text="@string/userDni"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="265dp" />

    <EditText
        android:id="@+id/editTextTextPersonName13"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="205dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:text="@string/userLastname"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="175dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="359dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="REGISTRAR USUARIO"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="64dp"
        android:text="@string/userName"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="363dp"
        android:layout_height="53dp"
        android:backgroundTint="#FF5722"
        android:onClick="nextStepDireccion"
        android:text="SIGUIENTE PASO"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="654dp" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>